test/files/neg/unchecked-impossible.check
unchecked-impossible.scala:6: error: pattern type is incompatible with expected type;
 found   : Seq[A]
 required: T2[Int,Int]
    case Seq(x) =>
            ^
one error found
